# meshcore-matrix-gate

./: .gitignore  CHANGELOG.md  HELTEC_CHANNEL1.md  LICENSE  README.md  check_contacts.py  config.example.yaml  debug_meshcore_wifi.py  dump_serial.py  export_node_key.py  get_channel_info.py  mcmgate.service.example  mcmrelay.service.example  mcrelay.service.example  pyproject.toml  send_dm.py  test_channel1.py  test_get_msg.py  test_send_msg.py
docs/: CONFIG.md  DM_TROUBLESHOOTING.md  E2EE.md  SECURITY.md
mcmgate/: __init__.py  auth_utils.py  cli.py  config.py  db_utils.py  log_utils.py  main.py  matrix_utils.py  meshcore_utils.py  message_queue.py
mcmrelay/: __init__.py  cli.py  config.py  db_utils.py  log_utils.py  main.py  matrix_utils.py  meshcore_utils.py  message_queue.py
mcrelay/: cli.py  config.py  db_utils.py  log_utils.py  main.py  matrix_utils.py  meshcore_utils.py  message_queue.py
