[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcmrelay"
version = "0.1.0"
description = "MeshCore Matrix Relay - Bridge between MeshCore and Matrix (fork of mmrelay)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "meshcore>=2.2.0",
    "matrix-nio[e2e]>=0.25.0",
    "pyyaml>=6.0",
    "platformdirs>=3.0",
    "rich>=13.0",
    "certifi",
]

[project.scripts]
mcmrelay = "mcmrelay.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mcmrelay*"]
