[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcmgate"
version = "0.1.0"
description = "MeshCore Matrix bridge. Inspired by mmrelay (Meshtastic), adapted for MeshCore protocol. GPL-3.0."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "meshcore>=2.2.0",
    "matrix-nio[e2e]>=0.25.0",
    "pyyaml>=6.0",
    "platformdirs>=3.0",
    "rich>=13.0",
    "certifi",
]

[project.scripts]
mcmgate = "mcmgate.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mcmgate*"]
