[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcmgate"
version = "0.2.0-beta1"
description = "MeshCore Matrix bridge. Inspired by mmrelay (Meshtastic), adapted for MeshCore protocol. GPL-3.0."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "meshcore>=2.2.0",
    "matrix-nio[e2e]>=0.25.0",
    "pyyaml>=6.0",
    "platformdirs>=3.0",
    "rich>=13.0",
    "certifi",
    "meshcoredecoder>=0.3.0",
    "pynacl>=1.5.0",  # Ed25519→X25519 for MeshCore DM decryption (expanded key format)
]

[project.scripts]
mcmgate = "mcmgate.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mcmgate*"]
